--- a/E-learning/Web.config
+++ b/E-learning/Web.config
@@ -31,7 +31,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
-  <connectionStrings configSource="ConnectoinStrings.config"/>
+  <connectionStrings configSource="ConnectionStrings.config"/>
   <system.diagnostics>
     <sources>
       <source name="System.ServiceModel" switchValue="Information, ActivityTracing" propagateActivity="true">
